Добавила тесты на методы репозитория, добавила конфиг для DaDataClient